--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -6,6 +6,7 @@
     font-size: 18px;
     color: var(--green);
     text-align: center;
+    text-decoration: none;
 }
 .hedershadow{
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
