--- a/client/src/components/Home/service/service.css
+++ b/client/src/components/Home/service/service.css
@@ -9,18 +9,29 @@
     justify-content: center;
 }
 .iconformt{
-    color:var(--lightgreen);
-    margin-top: 40px;
-    margin-bottom: 30px;
+    color:white !important;
+   
     font-size: 2.5rem;
+    
+    /* padding: 50px; */
+}
+.roundshape{
+    background-color: var(--orange);
+    border-radius: 50%;
+    /* margin-top: 40px; */
+    margin-bottom: 30px;
+    padding: 25px;
 }
 .capcolor{
-    color: var(--green);
+    color: var(--caption);
     margin-bottom: 10px;
+    font-weight: 700;
+
 }
 .contentColor{
-    color: var(--lightgreen);
+    color:var(--text);
     text-align: center;
-    margin-bottom: 40px;
+    /* margin-bottom: 40px; */
     font-size: 16px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
